Fixed title spacing

--- a/frontend/src/components/PageTitle/styles.css
+++ b/frontend/src/components/PageTitle/styles.css
@@ -1,6 +1,6 @@
 .page-title {
     position: relative;
-    margin: 45px 0;
+    margin: 90px 0 45px;
 }
 
 .page-title h2 {
